@@ -5,12 +5,12 @@ perl                      = 5.010001
 namespace::autoclean      = 0.26
 Email::MIME               = 1.934
 Email::Sender             = 1.300018
-File::DataClass           = v0.66.0
+File::DataClass           = v0.68.0
 MIME::Types               = 2.11
 Moo                       = 2.000001
 Try::Tiny                 = 0.22
-Unexpected                = v0.41.0
-Web::Components::Role::TT = v0.4.0
+Unexpected                = v0.43.0
+Web::Components::Role::TT = v0.5.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
