@@ -1,5 +1,6 @@
 Revision history for Web::Components::Role::Email
 
+          - Added badge markup
           - Fewer test dependencies in boilerplate
           - Passes tests
 
